--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node server",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines":{
+    "node": "12.18.0",
+    "npm": "6.14.4"
   },
   "private": true,
   "dependencies": {
